--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-04.01 :
-1. Дополняем account(добавить список дз)
-2. Создать новое приложение homework(мб немного вёрстки)
+13.01:
+1. Сделать дни недели 
+2. Начать матрицу
